kubernetes/base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: eco-go
      component: backend
  template:
    metadata:
      labels:
        app: eco-go
        component: backend
    spec:
      containers:
      - name: backend
        image: joelkodji/eco-go:backend
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    component: backend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
