kubernetes/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: eco-go
      component: frontend
  template:
    metadata:
      labels:
        app: eco-go
        component: frontend
    spec:
      containers:
      - name: frontend
        image: joelkodji/eco-go:frontend
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: eco-go
    component: frontend
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
